Dynamic Configs
Re-Wrote the config system to dynamically load configs based upon if a module is loaded or not.